add javascript functions

--- a/index.html
+++ b/index.html
@@ -13,41 +13,41 @@
 	<body>
 		<main class="container">
 			<form>
-				<input type="number" title="digite os números" value="0"  disabled>
+				<input type="number" title="digite os números" placeholder="0" disabled>
 			</form>
 
 			<ul>
-				<li><button data-value="ac"><i class="fa-solid fa-a"></i><i class="fa-solid fa-c"></i></button></li>
-				<li><button data-value="c"><i class="fa-solid fa-c"></i></button></li>
-				<li><button data-value="porcentagem"><i class="fa-solid fa-percent"></i></button></li>
-				<li><button data-value="divisao"><i class="fa-solid fa-divide"></i></button></li>
+				<li><button data-value=""><i class="fa-solid fa-a"></i><i class="fa-solid fa-c"></i></button></li>
+				<li><button data-value="backspace"><i class="fa-solid fa-c"></i></button></li>
+				<li><button data-value="%"><i class="fa-solid fa-percent"></i></button></li>
+				<li><button data-value="/"><i class="fa-solid fa-divide"></i></button></li>
 			</ul>
 			<ul>
-				<li><button data-value="sete"><i class="fa-solid fa-7"></i></button></li>
-				<li><button data-value="oito"><i class="fa-solid fa-8"></i></button></li>
-				<li><button data-value="nove"><i class="fa-solid fa-9"></i></button></li>
-				<li><button data-value="muitiplicacao"><i class="fa-solid fa-x"></i></button></li>
+				<li><button data-value="7"><i class="fa-solid fa-7"></i></button></li>
+				<li><button data-value="8"><i class="fa-solid fa-8"></i></button></li>
+				<li><button data-value="9"><i class="fa-solid fa-9"></i></button></li>
+				<li><button data-value="*"><i class="fa-solid fa-x"></i></button></li>
 			</ul>
 			<ul>
-				<li><button><i class="fa-solid fa-4"></i></button></li>
-				<li><button><i class="fa-solid fa-5"></i></button></li>
-				<li><button><i class="fa-solid fa-3"></i></button></li>
-				<li><button><i class="fa-solid fa-minus"></i></button></li>
+				<li><button data-value="4"><i class="fa-solid fa-4"></i></button></li>
+				<li><button data-value="5"><i class="fa-solid fa-5"></i></button></li>
+				<li><button data-value="6"><i class="fa-solid fa-3"></i></button></li>
+				<li><button data-value="-"><i class="fa-solid fa-minus"></i></button></li>
 			</ul>
 			<ul>
-				<li><button><i class="fa-solid fa-1"></i></button></li>
-				<li><button><i class="fa-solid fa-2"></i></button></li>
-				<li><button><i class="fa-solid fa-3"></i></button></li>
-				<li><button><i class="fa-solid fa-plus"></i></button></li>
+				<li><button data-value="1"><i class="fa-solid fa-1"></i></button></li>
+				<li><button data-value="2"><i class="fa-solid fa-2"></i></button></li>
+				<li><button data-value="3"><i class="fa-solid fa-3"></i></button></li>
+				<li><button data-value="+"><i class="fa-solid fa-plus"></i></button></li>
 			</ul>
 			<ul>
-				<li><button><i class="fa-solid fa-chevron-up"></i></button></li>
-				<li><button><i class="fa-solid fa-0"></i></button></li>
-				<li><button>,</i></button></li>
-				<li><button><i class="fa-solid fa-equals"></i></button></li>
+				<li><button data-value="."><i class="fa-solid fa-circle"></i></button></li>
+				<li><button data-value="0"><i class="fa-solid fa-0"></i></button></li>
+				<li><button data-value=",">,</i></button></li>
+				<li><button data-value="result"><i class="fa-solid fa-equals"></i></button></li>
 			</ul>
 		</main>
 	</body>	
-
+	<script type="text/javascript" src="javascript/script.js"></script>
 	<script src="https://kit.fontawesome.com/46db288b2a.js" crossorigin="anonymous"></script>
 </html>
