add readonly property on input field

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<main class="container">
 			<form>
-				<input type="number" title="digite os números" placeholder="0" disabled>
+				<input type="number" title="digite os números" placeholder="0" readonly>
 			</form>
 
 			<ul>
